<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuInicial">

    <Button
        android:id="@+id/bntproductos"
        android:layout_width="392dp"
        android:layout_height="71dp"
        android:text="@string/productos"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857"
        android:backgroundTint="@color/black"
        android:textColor="@color/yellow"/>

    <Button
        android:id="@+id/btnrestaurantes"
        android:layout_width="408dp"
        android:layout_height="67dp"
        android:backgroundTint="@color/black"
        android:drawableTint="#D8C30D"
        android:text="@string/apicultores"
        android:textColorLink="#CFBE25"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468"
        android:textColor="@color/yellow"/>

    <Button
        android:id="@+id/btnreservas"
        android:layout_width="406dp"
        android:layout_height="67dp"
        android:text="@string/reservas"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657"
        android:backgroundTint="@color/black"
        android:textColor="@color/yellow"/>

    <TextView
        android:id="@+id/txtmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menuinicial"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308"
        android:textColor="@color/yellow"/>

    <TextView
        android:id="@+id/txtmenu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menuinicial2"
        android:textColor="#050505"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="178dp"
        android:layout_height="158dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/abeja" />
</androidx.constraintlayout.widget.ConstraintLayout>